[gd_scene load_steps=17 format=2]

[ext_resource path="res://Resources/Background/blue_button_sm_template.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/Background/blue_button_pressed_sm_template.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/Background/purple_button_hover_sm_template.jpg" type="Texture" id=3]
[ext_resource path="res://Resources/Background/blue_button_pressed_template.jpg" type="Texture" id=4]
[ext_resource path="res://Resources/Background/Player_Draft_Box.jpg" type="Texture" id=5]
[ext_resource path="res://Resources/Scripts/DraftCardGUI.gd" type="Script" id=6]
[ext_resource path="res://Resources/SharedDB/PlayerDB.gd" type="Script" id=7]
[ext_resource path="res://Resources/Background/purple_button_hover_template.jpg" type="Texture" id=8]
[ext_resource path="res://Resources/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Resources/Background/blue_button_template.jpg" type="Texture" id=10]
[ext_resource path="res://Resources/Background/acylic_blue_menu_875_450.jpg" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 9 )

[node name="DraftCardsGUI" type="Control"]
margin_top = 75.0
margin_right = 875.0
margin_bottom = 525.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 875.0
margin_bottom = 450.0
texture = ExtResource( 11 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 875.0
margin_bottom = 450.0
grow_horizontal = 2
custom_constants/separation = 19
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 875.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "Draft Pick"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 875.0
margin_bottom = 83.0

[node name="ReturnToMenuButton2" type="TextureButton" parent="."]
margin_left = 500.0
margin_top = 400.0
margin_right = 800.0
margin_bottom = 450.0
grow_horizontal = 2
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ReturnToMenuButton2"]
margin_right = 300.0
margin_bottom = 30.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "MAIN MENU"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 26.4319
margin_top = 65.0
margin_right = 776.432
margin_bottom = 394.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxPlayer1" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 200.0
margin_bottom = 329.0

[node name="BG_Player_1" type="TextureRect" parent="HBoxContainer/VBoxPlayer1"]
margin_right = 200.0
margin_bottom = 300.0
texture = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="HBoxContainer/VBoxPlayer1/BG_Player_1"]
margin_left = 10.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexRec_PlayerImage_Slot_001" type="TextureRect" parent="HBoxContainer/VBoxPlayer1/BG_Player_1/NinePatchRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTLPlayer1" type="RichTextLabel" parent="HBoxContainer/VBoxPlayer1/BG_Player_1"]
margin_left = 19.0
margin_top = 198.0
margin_right = 182.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="HBoxContainer/VBoxPlayer1"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 329.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxPlayer1/TextureButton"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 3 )
text = "Select Player"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxPlayer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 329.0

[node name="BG_Player_2" type="TextureRect" parent="HBoxContainer/VBoxPlayer2"]
margin_right = 200.0
margin_bottom = 300.0
texture = ExtResource( 5 )

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/VBoxPlayer2/BG_Player_2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexRec_PlayerImage_Slot_002" type="TextureRect" parent="HBoxContainer/VBoxPlayer2/BG_Player_2/NinePatchRect2"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTLPlayer2" type="RichTextLabel" parent="HBoxContainer/VBoxPlayer2/BG_Player_2"]
margin_left = -185.0
margin_top = 198.0
margin_right = -22.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="HBoxContainer/VBoxPlayer2"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 329.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxPlayer2/TextureButton2"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 4 )
text = "Select Player"
align = 1

[node name="VBoxPlayer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 329.0

[node name="BG_Player_3" type="TextureRect" parent="HBoxContainer/VBoxPlayer3"]
margin_right = 200.0
margin_bottom = 300.0
texture = ExtResource( 5 )

[node name="NinePatchRect3" type="NinePatchRect" parent="HBoxContainer/VBoxPlayer3/BG_Player_3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 180.0
region_rect = Rect2( 257, 39, 0, 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexRec_PlayerImage_Slot_003" type="TextureRect" parent="HBoxContainer/VBoxPlayer3/BG_Player_3/NinePatchRect3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTLPlayer3" type="RichTextLabel" parent="HBoxContainer/VBoxPlayer3/BG_Player_3"]
margin_left = -389.0
margin_top = 198.0
margin_right = -226.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/VBoxPlayer3"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 329.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxPlayer3/TextureButton3"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "Select Player"
align = 1

[node name="VBoxPlayer4" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 612.0
margin_right = 812.0
margin_bottom = 329.0

[node name="BG_Player_4" type="TextureRect" parent="HBoxContainer/VBoxPlayer4"]
margin_right = 200.0
margin_bottom = 300.0
texture = ExtResource( 5 )

[node name="NinePatchRect4" type="NinePatchRect" parent="HBoxContainer/VBoxPlayer4/BG_Player_4"]
margin_left = 10.0
margin_top = 10.0
margin_right = 180.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TexRec_PlayerImage_Slot_004" type="TextureRect" parent="HBoxContainer/VBoxPlayer4/BG_Player_4/NinePatchRect4"]
margin_left = 10.0
margin_top = 10.0
margin_right = 170.0
margin_bottom = 170.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RTLPlayer4" type="RichTextLabel" parent="HBoxContainer/VBoxPlayer4/BG_Player_4"]
margin_left = -593.0
margin_top = 198.0
margin_right = -430.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="HBoxContainer/VBoxPlayer4"]
margin_top = 304.0
margin_right = 200.0
margin_bottom = 329.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxPlayer4/TextureButton3"]
margin_right = 200.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 5 )
text = "Select Player"
align = 1

[node name="Node" type="Node" parent="."]
script = ExtResource( 7 )
[connection signal="pressed" from="HBoxContainer/VBoxPlayer1/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxPlayer2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxPlayer3/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxPlayer4/TextureButton3" to="." method="_on_TextureButton3_pressed"]
